--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "axios": "^0.20.0",
     "date-fns": "^2.8.1",
     "fontsource-roboto": "^3.0.3",
+    "google-map-react": "^2.1.9",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.28.0",
     "node-sass": "^5.0.0",
     "razorpay": "^2.0.6",
     "react": "^16.13.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
+    "react-geocode": "^0.2.2",
+    "react-google-maps": "^9.4.5",
     "react-horizontal-scrolling-menu": "^0.7.8",
     "react-horizontal-slider": "^1.1.1",
     "react-material-ui-carousel": "^2.0.0",
@@ -43,6 +47,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": "react-app"
   },
