--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
+    "@googlemaps/js-api-loader": "^1.11.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.8",
@@ -18,6 +19,7 @@
     "google-map-react": "^2.1.9",
     "google-maps-react": "^2.0.6",
     "moment": "^2.28.0",
+    "node-geocoder": "^3.27.0",
     "node-sass": "^5.0.0",
     "razorpay": "^2.0.6",
     "react": "^16.13.1",
@@ -31,7 +33,7 @@
     "react-material-ui-form-validator": "^2.1.1",
     "react-modal": "^3.11.2",
     "react-otp-input": "^2.0.2",
-    "react-responsive": "^8.1.0",
+    "react-responsive": "^8.2.0",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -47,7 +49,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -62,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/googlemaps": "^3.43.0"
   }
 }
